--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "nicolopignatelli/valueobjects": "2.3"
     },
     "autoload": {
         "psr-4": {"Pivot\\": "src"}
